--- a/src/scss/vars/_spacing.scss
+++ b/src/scss/vars/_spacing.scss
@@ -1,13 +1,16 @@
 // Spacing sizes
 $spacers: () !default;
 $spacers: map-merge((
-  0: 0,
-  8: 8,
-  16: 16,
-  24: 24,
-  32: 32,
-  40: 40,
-  48: 48,
-  64: 64,
-  80: 80,
+        0: 0,
+        8: 8,
+        16: 16,
+        24: 24,
+        32: 32,
+        40: 40,
+        48: 48,
+        64: 64,
+        80: 80,
+        112:112,
+        128:128,
+        144:144
 ), $spacers);
