--- a/src/scss/base/user-text/_user-text.scss
+++ b/src/scss/base/user-text/_user-text.scss
@@ -88,7 +88,7 @@
         background-size: 0 2px;
         background-position: 100% 100%;
         background-repeat: no-repeat;
-        transition: background-size 0.3s ease;
+        @include defaultTransition(background-size);
       }
 
       &:hover {
