--- a/src/scss/utils/_reboot.scss
+++ b/src/scss/utils/_reboot.scss
@@ -24,6 +24,7 @@ body {
   font-weight: 400;
   line-height: 1.15;
   color: $color-black;
+  background-color: $color-light;
   text-align: left;
 }
 
@@ -121,12 +122,9 @@ sup {
 
 
 a {
+  color: $color-black;
   text-decoration: none;
   background-color: transparent;
-
-  &:hover {
-    text-decoration: underline;
-  }
 }
 
 
