--- a/src/pages/atoms.twig
+++ b/src/pages/atoms.twig
@@ -30,5 +30,63 @@
     </div>
 
 
+    {#link-action#}
+    <div class="py-40">
+        <div class="container">
+            {% for link in links %}
+                <div class="py-8">
+                    {% view "@link-action" with {
+                        link:link
+                    } %}
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+
+    {#link-action#}
+    <div class="py-40 bg-blue">
+        <div class="container">
+            {% for link in links2 %}
+                <div class="py-8">
+                    {% view "@link-action" with {
+                        link:link
+                    } %}
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+
+    {# nav-arrows #}
+    <div class="py-40">
+        <div class="container">
+            {% view "@nav-arrows" %}
+        </div>
+    </div>
+
+    {# nav-arrows #}
+    <div class="py-40 bg-blue">
+        <div class="container">
+            {% view "@nav-arrows" with {
+                nav_arrows:{
+                    theme:"light"
+                }
+            } %}
+        </div>
+    </div>
 
 {% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
