--- a/src/scss/vars/_colors.scss
+++ b/src/scss/vars/_colors.scss
@@ -5,6 +5,7 @@ $color-blue: #01519D;
 $color-light-blue: #00BCFF;
 $color-light: #F4F5F8;
 $color-grey: #8C9198;
+$color-grey-light: #DCDEE1;
 
 // Color system:
 // 'colorName': 'color'
