--- a/src/include/@atoms/field-input/field-input.scss
+++ b/src/include/@atoms/field-input/field-input.scss
@@ -1,3 +1,15 @@
+.input-shell {
+  position: relative;
+
+  .parsley-errors-list {
+    position: absolute;
+    bottom: rem(-20);
+    left: 0;
+    color: $color-error;
+    @include text-small;
+  }
+}
+
 .input {
   $root:&;
 
@@ -10,7 +22,7 @@
   height: rem(60);
   border: 2px solid $color-grey-light;
   background: transparent;
-  @include defaultTransition('border-color');
+  @include defaultTransition(border-color);
 
   &::placeholder {
     opacity: 1;
@@ -42,4 +54,18 @@
     }
   }
 
+  &.parsley-error {
+    border-color: $color-error;
+  }
+
+  &.parsley-success, &.not-empty:not(.parsley-error) {
+    background-size: rem(16);
+    background-image: $icon-success-blue;
+    background-repeat: no-repeat;
+    background-position: calc(100% - #{rem(20)}) 50%;
+  }
+
+  &--has-error {
+    border-color: $color-error !important;
+  }
 }
