--- a/src/include/@atoms/field-input/field-input.twig
+++ b/src/include/@atoms/field-input/field-input.twig
@@ -1,12 +1,20 @@
-<input
-        type="{{ field.type?: 'text' }}"
-        class="input {% if field.theme %}input--{{ field.theme }}{% endif %}"
-        {% if  field.id %}id="{{ field.id }}" {% endif %}
-        {% if  field.name %}name="{{ field.name }}" {% endif %}
-        {% if  field.placeholder %}placeholder="{{ field.placeholder }}" {% endif %}
-        {% if  field.required %} required {% endif %}
-        {% if field.disabled %} disabled{% endif %}
-        {% if field.readonly %} readonly{% endif %}
-       {% if field.autocomplete %} autocomplete="{{ field.autocomplete }}"{% endif %}
-
->
+<div class="input-shell">
+    <input
+            id="{{ field.id }}"
+            type="{{ field.type?: 'text' }}"
+           class="input{% if field.class %} {{ field.class }}{% endif %}{% if field.theme %} input--{{ field.theme }}{% endif %}"
+            {% if field.placeholder %}    placeholder="{{ field.placeholder }}"{% endif %}
+           name="{{ field.name }}"
+            {% if field.type != 'tel' and field.type != 'email' %}
+                {% if field.pattern %} pattern="{{ field.pattern }}"{% endif %}
+            {% endif %}
+            {% if field.type == 'tel' %} data-mask-tel data-parsley-pattern="/^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{14}$/"{% endif %}
+            {% if field.type == 'email' %} data-parsley-pattern="/^([\w.*-]+@([\w-]+\.)+[\w-]{2,4})?$/" {% endif %}
+            {% if field.attr %} {{ field.attr }}{% endif %}
+            {% if field.autocomplete %} autocomplete="{{ field.autocomplete }}"{% endif %}
+            {% if field.disabled %} disabled{% endif %}
+            {% if field.required %} required{% endif %}
+            {% if field.value %} value="{{ field.value }}"{% endif %}
+            {% if field.readonly %} readonly{% endif %}
+            data-parsley-trigger="change">
+</div>
