--- a/src/scss/vars/_colors.scss
+++ b/src/scss/vars/_colors.scss
@@ -7,7 +7,9 @@ $color-light: #F4F5F8;
 $color-grey: #8C9198;
 $color-grey-light: #DCDEE1;
 $color-dark-grey: #8c9198;
+
 $color-error:#ff0000;
+$color-dark: #202429;
 
 // Color system:
 // 'colorName': 'color'
