Атомы, saljs и фактоиды

--- a/src/pages/atoms.twig
+++ b/src/pages/atoms.twig
@@ -2,6 +2,13 @@
 
 {% block content %}
 
+
+
+
+
+
+
+
     {# button #}
     <div class="py-40">
         <div class="container">
@@ -164,7 +171,31 @@
         </div>
     </div>
 
+    {# factor #}
+    <div class="py-40">
+        <div class="container">
+            {% for factor in factors %}
+                <div class="py-8">
+                    {% view "@factor" with {
+                        factor:factor
+                    } %}
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 
+    {# factor #}
+    <div class="py-40 bg-blue">
+        <div class="container">
+            {% for factor in factors2 %}
+                <div class="py-8">
+                    {% view "@factor" with {
+                        factor:factor
+                    } %}
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
 
 
