Организмы, блок с фактоидам

--- a/src/scss/mixins/_container.scss
+++ b/src/scss/mixins/_container.scss
@@ -1,13 +1,18 @@
-@mixin make-container() {
+@mixin container {
+  max-width: rem(1440);
   width: 100%;
-  margin-right: auto;
   margin-left: auto;
+  margin-right: auto;
+  padding-left: rem(16);
+  padding-right: rem(16);
+
+  @include media-breakpoint-up(lg) {
+    padding-left: rem(76);
+    padding-right: rem(76);
+  }
+  @include media-breakpoint-only(md) {
+    padding-left: rem(40);
+    padding-right: rem(40);
+  }
 }
 
-@mixin base-container {
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: rem(24);
-  padding-right: rem(24);
-}
