--- a/src/scss/libs/index.scss
+++ b/src/scss/libs/index.scss
@@ -1,4 +1,8 @@
 @import 'sal';
 
 @import "~select2/dist/css/select2.min.css";
-@import "select";
+@import "select-custom-styles";
+
+@import "~swiper/swiper";
+@import "~swiper/components/effect-fade/effect-fade";
+@import "swiper-custom-styles";
