--- a/src/include/&organisms/footer/footer.scss
+++ b/src/include/&organisms/footer/footer.scss
@@ -1,1 +1,400 @@
-.footer {}
+.footer {
+	$root: &;
+
+	font-size: 0;
+	line-height: 1;
+
+	&__container {
+		#{$root}__base & {
+			@include media-breakpoint-up(md) {
+				display: flex;
+				flex-wrap: wrap;
+			}
+		}
+
+		#{$root}__bottom & {
+			display: flex;
+			align-items: flex-start;
+		}
+	}
+
+	&__base {
+		position: relative;
+		padding-bottom: rem(44);
+
+		@include media-breakpoint-up(md) {
+			padding-bottom: rem(40);
+		}
+	}
+
+	&__logo {
+		display: block;
+		width: rem(68);
+		height: rem(54);
+		margin-bottom: rem(16);
+		color: $color-blue;
+
+		.logo-line {
+			fill: #00AEEC;
+		}
+
+		@include media-breakpoint-up(md) {
+			width: rem(92);
+			height: rem(72);
+			margin-bottom: rem(32);
+		}
+	}
+
+	&__col {
+		@include media-breakpoint-up(lg) {
+			&:nth-child(1) {
+				width: 16.3333%;
+			}
+			&:nth-child(2) {
+				width: 25%;
+			}
+			&:nth-child(3) {
+				width: 33.3333%;
+			}
+			&:nth-child(4) {
+				width: 25%;
+			}
+
+			&:not(:first-child) {
+				padding-left: rem(8);
+			}
+		}
+		@include media-breakpoint-up(md) {
+			&:nth-child(1) {
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+			}
+		}
+		@include media-breakpoint-only(md) {
+			width: 33.3333%;
+
+			&:nth-child(4):last-child {
+				margin-top: rem(128);
+				width: 100%;
+			}
+			&:nth-child(3) {
+				position: relative;
+			}
+		}
+		@include media-breakpoint-down(sm) {
+			&:nth-child(1) {
+				margin-bottom: rem(24);
+			}
+		}
+
+		& > :last-child {
+			margin-bottom: 0;
+		}
+	}
+
+	&__item {
+		#{$root}__navigation & {
+			&:not(:last-child) {
+				margin-bottom: rem(18);
+			}
+		}
+
+		#{$root}__links & {
+
+			&:not(:last-child) {
+				margin-bottom: rem(18);
+			}
+
+			@include media-breakpoint-only(md) {
+				display: inline-block;
+				width: 100%;
+				padding-right: rem(60);
+			}
+		}
+
+		#{$root}__socials & {
+			&:not(:last-child) {
+				margin-right: rem(8);
+			}
+
+			@include media-breakpoint-up(lg) {
+				&:not(:last-child) {
+					margin-right: rem(16);
+				}
+			}
+		}
+	}
+
+	&__link {
+		@include media-breakpoint-up(lg) {
+			@include defaultTransition(color);
+		}
+
+		#{$root}__socials & {
+			display: block;
+			width: rem(40);
+			height: rem(40);
+			font-size: 0;
+			line-height: rem(40);
+			text-align: center;
+			border-radius: 50%;
+			background-color: $color-white;
+			color: $color-black;
+			cursor: pointer;
+
+			@include media-breakpoint-up(lg) {
+				@include defaultTransition(background-color, color);
+
+				&:hover {
+					background-color: $color-blue;
+					color: $color-white;
+				}
+			}
+			@include media-breakpoint-up(md) {
+				width: rem(48);
+				height: rem(48);
+				line-height: rem(48);
+			}
+
+			@include media-breakpoint-down(sm) {
+				.icon {
+					width: rem(18);
+					height: rem(18);
+				}
+			}
+		}
+
+		#{$root}__navigation & {
+			@include media-breakpoint-up(lg) {
+				&:hover {
+					color: $color-blue;
+				}
+			}
+
+			&--active {
+				cursor: default;
+				color: $color-blue;
+			}
+		}
+
+		#{$root}__links &[href] {
+			@include media-breakpoint-up(lg) {
+				&:hover {
+					color: $color-blue;
+				}
+			}
+		}
+
+		#{$root}__phone & {
+			@include media-breakpoint-up(lg) {
+				&:hover {
+					color: $color-blue;
+				}
+			}
+		}
+
+		#{$root}__email & {
+			display: inline-block;
+
+			@include media-breakpoint-up(lg) {
+				position: relative;
+
+				&:after {
+					position: absolute;
+					left: 0;
+					bottom: rem(-4);
+					width: 100%;
+					height: rem(4);
+					content: "";
+					background-size: 0 2px;
+					background-position: 100% 100%;
+					background-image: linear-gradient($color-blue, $color-blue);
+					background-repeat: no-repeat;
+					will-change: background-size;
+					@include defaultTransition(background-size, color);
+				}
+			}
+
+			&:hover {
+				@include media-breakpoint-up(lg) {
+					&:after {
+						background-position: 0 100%;
+						background-size: 100% 2px;
+					}
+				}
+			}
+		}
+
+		#{$root}__creator & {
+			@include media-breakpoint-up(lg) {
+				&:hover {
+					color: $color-blue;
+				}
+			}
+		}
+
+		&--all {
+			@include media-breakpoint-up(lg) {
+				&:hover {
+					color: rgba($color-blue, 0.7);
+				}
+			}
+		}
+	}
+
+	&__phone {
+		margin-bottom: rem(18);
+
+		@include media-breakpoint-up(lg) {
+			padding-top: rem(6);
+		}
+		@include media-breakpoint-up(md) {
+			margin-bottom: rem(16);
+		}
+	}
+
+	&__navigation {
+		@include media-breakpoint-down(sm) {
+			display: none;
+		}
+	}
+
+	&__address {
+		margin-bottom: rem(8);
+	}
+
+	&__email {
+		margin-bottom: rem(32);
+
+		@include media-breakpoint-up(md) {
+			margin-bottom: rem(24);
+		}
+	}
+
+	&__action {
+		margin-bottom: rem(40);
+
+		@include media-breakpoint-only(md) {
+			margin-bottom: rem(48);
+		}
+	}
+
+	&__socials {
+		display: flex;
+		align-items: center;
+
+		@include media-breakpoint-only(md) {
+			position: absolute;
+			bottom: rem(-88);
+			left: -100%;
+		}
+		@include media-breakpoint-down(sm) {
+			justify-content: center;
+		}
+	}
+
+	&__links {
+		@include media-breakpoint-up(lg) {
+			padding-right: rem(64);
+		}
+		@include media-breakpoint-only(md) {
+			columns: 3;
+
+			&:after {
+				display: inline-block;
+				width: 100%;
+				height: rem(100);
+				content: "";
+			}
+		}
+		@include media-breakpoint-down(sm) {
+			display: none;
+		}
+	}
+
+	&__bottom {
+		background-color: $color-white;
+		padding: rem(40) 0;
+
+		#{$root}__container {
+			@include media-breakpoint-down(md) {
+				flex-wrap: wrap;
+			}
+		}
+	}
+
+	&__copyright {
+		@include media-breakpoint-up(lg) {
+			width: 25%;
+			padding-right: 8.3333%;
+		}
+		@include media-breakpoint-only(md) {
+			width: 33%;
+			padding-right: rem(90);
+		}
+		@include media-breakpoint-down(sm) {
+			width: 50%;
+		}
+	}
+
+	&__text {
+		@include media-breakpoint-up(lg) {
+			width: 41.6666%;
+			padding-right: 8.3333%;
+		}
+		@include media-breakpoint-only(md) {
+			width: 41.6666%;
+		}
+		@include media-breakpoint-down(sm) {
+			display: none;
+		}
+	}
+
+	&__cookies-settings {
+		@include media-breakpoint-down(md) {
+			order: 1;
+			width: 33%;
+			margin-top: rem(16);
+		}
+		@include media-breakpoint-up(lg) {
+			align-self: flex-end;
+		}
+	}
+
+	&__cookies-trigger {
+		color: $color-dark-grey;
+		@include text-small;
+		@include defaultTransition(color);
+
+		@include media-breakpoint-up(lg) {
+			&:hover {
+				color: $color-blue;
+			}
+		}
+	}
+
+	&__creator {
+		display: inline-flex;
+		align-items: center;
+		justify-content: flex-end;
+		width: 50%;
+
+		@include media-breakpoint-up(lg) {
+			width: 12%;
+		}
+		@include media-breakpoint-up(md) {
+			align-self: flex-end;
+		}
+		@include media-breakpoint-only(md) {
+			width: 25%;
+		}
+
+		.icon {
+			width: rem(47);
+			height: rem(15);
+			color: $color-black;
+			margin-left: 2px;
+		}
+	}
+}
