--- a/src/include/&organisms/footer/footer.twig
+++ b/src/include/&organisms/footer/footer.twig
@@ -1,1 +1,128 @@
-<footer class="footer"></footer>
+<footer class="footer" role="contentinfo">
+	<div class="footer__base">
+		<div class="footer__container container">
+			<div class="footer__col">
+				{% if footer.logo.href is not empty %}
+					<a class="footer__logo" href="{{ footer.logo.href }}">
+						{% view '@icon' with {
+							icon: footer.logo.icon
+						} %}
+					</a>
+				{% else %}
+					<div class="footer__logo">
+						{% view '@icon' with {
+							icon: footer.logo.icon
+						} %}
+					</div>
+				{% endif %}
+				{% if footer.link %}
+					<a href="{{ footer.link.href }}"
+					   class="footer__link footer__link--all text-small color-blue"{% if footer.link.external %} target="_blank"{% endif %}{% if footer.link.attr %} {{ footer.link.attr }}{% endif %}>{{ footer.link.text }}</a>
+				{% endif %}
+			</div>
+			<div class="footer__col">
+				{% if footer.navigation %}
+					<ul class="footer__navigation">
+						{% for item in footer.navigation %}
+							<li class="footer__item">
+								{% if not item.active %}
+									<a href="{{ item.href }}" class="footer__link text-default">{{ item.text }}</a>
+								{% else %}
+									<span class="footer__link footer__link--active text-default">{{ item.text }}</span>
+								{% endif %}
+							</li>
+						{% endfor %}
+					</ul>
+				{% endif %}
+			</div>
+			<div class="footer__col">
+				{% if footer.phone %}
+					<div class="footer__phone">
+						<a href="tel:{{ footer.phone.href }}" class="footer__link h3">{{ footer.phone.text }}</a>
+					</div>
+				{% endif %}
+				{% if footer.address %}
+					<div class="footer__address">
+						<p class="text-small">{{ footer.address }}</p>
+					</div>
+				{% endif %}
+				{% if footer.email %}
+					<div class="footer__email">
+						<a href="mailto:{{ footer.email.href }}"
+						   class="footer__link text-small color-blue">{{ footer.email.text }}</a>
+					</div>
+				{% endif %}
+				{% if footer.action %}
+					<div class="footer__action">
+						{% view '@button' with {
+							button: footer.action
+						} %}
+					</div>
+				{% endif %}
+				{% if footer.social %}
+					<ul class="footer__socials">
+						{% for social in footer.social %}
+							<li class="footer__item">
+								<a href="{{ social.href }}"
+								   class="footer__link"{% if social.title %} title="{{ social.title }}"{% endif %}
+								   target="_blank">
+									{% view '@icon' with {
+										icon: social.icon
+									} %}
+								</a>
+							</li>
+						{% endfor %}
+					</ul>
+				{% endif %}
+			</div>
+			<div class="footer__col">
+				{% if footer.links %}
+					<ul class="footer__links">
+						{% for item in footer.links %}
+							<li class="footer__item">
+								{% if item.href %}
+									<a href="{{ item.href }}"
+									   class="footer__link text-small color-dark-grey">{{ item.text }}</a>
+								{% else %}
+									<span class="footer__link text-small color-blue">{{ item.text }}</span>
+								{% endif %}
+							</li>
+						{% endfor %}
+					</ul>
+				{% endif %}
+			</div>
+		</div>
+	</div>
+	<div class="footer__bottom">
+		<div class="footer__container container">
+			{% if footer.copyright %}
+				<div class="footer__copyright">
+					<p class="text-small">{{ footer.copyright }}</p>
+				</div>
+			{% endif %}
+			{% if footer.text %}
+				<div class="footer__text">
+					<p class="text-small color-dark-grey">{{ footer.text }}</p>
+				</div>
+			{% endif %}
+			{% if footer.cookies_settings %}
+				<div class="footer__cookies-settings">
+					<a class="footer__cookies-trigger"
+					   href="{{ footer.cookies_settings.href }}" data-modal>{{ footer.cookies_settings.text }}</a>
+				</div>
+			{% endif %}
+			{% if footer.creator %}
+				<div class="footer__creator">
+					<a href="{{ footer.creator.href }}" class="footer__link text-small color-dark-grey"
+					   target="_blank">{{ footer.creator.text }}
+						{% if footer.creator.icon %}
+							{% view '@icon' with {
+								icon: footer.creator.icon
+							} %}
+						{% endif %}
+					</a>
+				</div>
+			{% endif %}
+		</div>
+	</div>
+</footer>
