Организмы, блок подписаться

--- a/src/pages/main.twig
+++ b/src/pages/main.twig
@@ -37,4 +37,10 @@
         } %}
     </div>
 
+    <div class="mb-lg-80 mb-md-96 mb-48">
+        {% view '&subscribe' with {
+            subscribe: subscribe
+        } %}
+    </div>
+
 {% endblock %}
