Организмы, слайдер мероприятий

--- a/src/include/&organisms/slider-container/slider-container.twig
+++ b/src/include/&organisms/slider-container/slider-container.twig
@@ -14,8 +14,8 @@
 		</div>
 	{% endif %}
 	<div class="slider-container__content">
-		{% if slider.name == 'slider-courses' %}
-			{% view '&slider-courses' with {
+		{% if slider.name == 'slider-events' %}
+			{% view '&slider-events' with {
 				slider: slider
 			} %}
 		{% elseif slider.name == 'slider-news' %}
